--- a/asistenciaqr/package.json
+++ b/asistenciaqr/package.json
@@ -29,6 +29,8 @@
     "@capacitor/status-bar": "6.0.2",
     "@ionic/angular": "^8.0.0",
     "bootstrap": "^5.3.3",
+    "firebase": "^11.0.2",
+    "html5-qrcode": "^2.3.8",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
