--- a/asistenciaqr/package.json
+++ b/asistenciaqr/package.json
@@ -28,6 +28,7 @@
     "@capacitor/keyboard": "6.0.3",
     "@capacitor/status-bar": "6.0.2",
     "@ionic/angular": "^8.0.0",
+    "angularx-qrcode": "^19.0.0",
     "bootstrap": "^5.3.3",
     "firebase": "^11.0.2",
     "html5-qrcode": "^2.3.8",
