--- a/asistenciaqr/package.json
+++ b/asistenciaqr/package.json
@@ -33,6 +33,8 @@
     "firebase": "^11.0.2",
     "html5-qrcode": "^2.3.8",
     "ionicons": "^7.0.0",
+    "ng-qrcode": "^18.0.0",
+    "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
